<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">


    <string name="app_name">点滴</string>
    <string name="app_web">diandi.bmob.cn</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username_hint">请输入用户名…</string>
    <string name="login_password_hint">请输入密码…</string>
    <string name="login_email_hint">请在此输入密码…</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索…</string>
    <string name="main_tab_diandi">点滴</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称…</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_check_update">检查更新</string>
    <string name="set_share">一键分享</string>
    <string name="set_connect_us">联系我们</string>
    <string name="link">下载地址</string>
    <string name="feedback">反馈建议</string>
    <string name="set_msgreceiver">消息设置</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="set_lock">手势锁</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="toast_error_username_short">用户名太短</string>
    <string name="toast_error_password_short">密码太短</string>
    <string name="blacklist">加入黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="network_refalsh">请检查网络并下拉刷新</string>

    <!-- GoogleDateTimePicker -->
    <string name="done_label">确定</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected"><xliff:g id="item" example="2013">%1$s</xliff:g> selected</string>
    <string name="deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>
    <string name="time_placeholder">--</string>
    <string name="time_separator">:</string>
    <string name="radial_numbers_typeface">sans-serif</string>
    <string name="sans_serif">sans-serif</string>
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="title_activity_date_time_pick">DateTimePickActivity</string>
    <string name="title_activity_my_write_plan">MyWritePlanActivity</string>
    <!-- GoogleDateTimePicker -->
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_plan">PlanActivity</string>
    <string name="title_activity_radial_progress">RadialProgressActivity</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="umeng_fb_powered_by">Powered by</string>
    <string name="umeng_fb_back">返回</string>
    <string name="umeng_fb_contact_info">联系方式</string>
    <string name="umeng_fb_contact_info_hint">QQ, 电话等我们能联系您的联系方式</string>
    <string name="umeng_fb_contact_title">填写联系信息</string>
    <string name="umeng_fb_contact_update_at">更新于 </string>
    <string name="umeng_fb_notification_content_formatter_multiple_msg">收到来自开发者的 %d 条回复。</string>
    <string name="umeng_fb_notification_content_formatter_single_msg">新回复: %s</string>
    <string name="umeng_fb_notification_ticker_text">有新的回复</string>
    <string name="umeng_fb_reply_content_default">你好， 我是产品经理，欢迎您反馈使用产品的感受和建议</string>
    <string name="umeng_fb_reply_content_hint">我想说</string>
    <string name="umeng_fb_reply_date_default">2013年3月12日 13:24:00</string>
    <string name="umeng_fb_send">发送</string>
    <string name="umeng_fb_title">用户反馈</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_test_activity3">TestActivity3</string>

</resources>
