<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/activity_add_friend_btn"
            style="@style/Smile.Button.theme"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/add_friend"
            android:visibility="gone"/>

        <Button
            android:id="@+id/activity_setting_launch_chat_btn"
            style="@style/Smile.Button.theme"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/chat"/>

        <Button
            android:id="@+id/activity_setting_add_black_btn"
            style="@style/Smile.Button.logout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/blacklist"/>

        <Button
            android:id="@+id/activity_setting_logout_btn"
            style="@style/Smile.Button.logout"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/logout"/>

    </LinearLayout>
</RelativeLayout>
