<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/theme_bg_color"
              android:orientation="vertical">

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar"/>

    <RelativeLayout
        android:id="@+id/fragment_set_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_myinfo"/>

        <TextView
            android:id="@+id/fragment_set_info_text"
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/register_bottom_arrow"/>
    </RelativeLayout>

    <include layout="@layout/item_line"/>

    <RelativeLayout
        android:id="@+id/fragment_set_blanklist_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_blacklist"/>

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/register_bottom_arrow"/>
    </RelativeLayout>

    <include layout="@layout/item_line"/>

    <RelativeLayout
        android:id="@+id/fragment_set_msg_reciver_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_msgreceiver"/>

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/register_bottom_arrow"/>
    </RelativeLayout>

    <include layout="@layout/item_line"/>

    <RelativeLayout
        android:id="@+id/fragment_setting_about_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="关于点滴"/>

        <TextView
            android:id="@+id/fragment_set_update_text"
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/register_bottom_arrow"
            android:textColor="@color/red"/>
    </RelativeLayout>

    <include layout="@layout/item_line"/>

    <Button
        android:id="@+id/fragment_set_logout_btn"
        style="@style/Smile.Button.logout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/logout"/>

</LinearLayout>
