<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/theme_bg_color"
              android:orientation="vertical">


    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar"/>

    <RelativeLayout
        android:id="@+id/activity_set_check_update_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_check_update"/>

        <TextView
            android:id="@+id/activity_set_version_text"
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:text="v1.1.7"
            android:textColor="@color/red"
            android:drawableRight="@drawable/register_bottom_arrow"/>
    </RelativeLayout>

    <include layout="@layout/item_line"/>

    <RelativeLayout
        android:id="@+id/rl_switch_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dip">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_notify"/>

        <ImageView
            android:id="@+id/iv_open_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/iv_close_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/off"
            android:visibility="invisible"/>
    </RelativeLayout>

    <include layout="@layout/item_line"/>

    <RelativeLayout
        android:id="@+id/rl_switch_voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dip">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_voice"/>

        <ImageView
            android:id="@+id/iv_open_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/iv_close_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/off"
            android:visibility="invisible"/>
    </RelativeLayout>

    <include
        android:id="@+id/view1"
        layout="@layout/item_line"/>


    <RelativeLayout
        android:id="@+id/rl_switch_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dip">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_vibrate"/>

        <ImageView
            android:id="@+id/iv_open_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/iv_close_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/off"
            android:visibility="invisible"/>
    </RelativeLayout>

    <include
        android:id="@+id/view2"
        layout="@layout/item_line"/>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_switch_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dip">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_lock"/>

        <ImageView
            android:id="@+id/iv_open_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/iv_close_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/off"
            android:visibility="invisible"/>
    </RelativeLayout>

    <include
        layout="@layout/item_line"/>
</LinearLayout>
