<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff">

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/common_actionbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/activity_setting_user_avatar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_settings_item_down"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/activity_setting_user_icon_tips"
                    style="@style/TextTheme.tipstheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="头像"/>

                <ImageView
                    android:id="@+id/activity_setting_user_avatar_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"/>
            </RelativeLayout>

            <include layout="@layout/item_line"/>

            <RelativeLayout
                android:id="@+id/activity_setting_user_nick_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_settings_item_down"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/activity_setting_user_nick_tips"
                    style="@style/TextTheme.tipstheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingBottom="8dip"
                    android:paddingTop="8dip"
                    android:text="昵称"/>

                <TextView
                    android:id="@+id/activity_setting_user_nick_text"
                    style="@style/TextTheme.tipstheme_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="8dip"
                    android:paddingTop="8dip"
                    android:text="点击登录"/>
            </RelativeLayout>

            <include layout="@layout/item_line"/>

            <RelativeLayout
                android:id="@+id/activity_setting_user_account_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_settings_item_down"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
           >

                <TextView
                    android:id="@+id/activity_setting_user_account_tips"
                    style="@style/TextTheme.tipstheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingBottom="8dip"
                    android:paddingTop="8dip"
                    android:text="点滴号"/>

                <TextView
                    android:id="@+id/activity_setting_user_account_text"
                    style="@style/TextTheme.tipstheme_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="8dip"
                    android:paddingTop="8dip"
                    android:text="点击登录"/>
            </RelativeLayout>

            <include layout="@layout/item_line"/>





            <include layout="@layout/item_line"/>


            <RelativeLayout
                android:id="@+id/activity_setting_user_sign_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_settings_item_down"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/activity_setting_user_sign_tips"
                    style="@style/TextTheme.tipstheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingBottom="8dip"
                    android:paddingTop="8dip"
                    android:text="个性签名"/>

                <TextView
                    android:id="@+id/activity_setting_user_sign_text"
                    style="@style/TextTheme.tipstheme_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="100dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingBottom="8dip"
                    android:paddingTop="8dip"
                    android:text="点击填写"/>
            </RelativeLayout>


            <include layout="@layout/item_line"/>

            <Button
                android:id="@+id/activity_add_friend_btn"
                style="@style/Smile.Button.theme"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/add_friend"
                android:visibility="gone"/>

            <Button
                android:id="@+id/activity_setting_launch_chat_btn"
                style="@style/Smile.Button.theme"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/chat"/>

            <Button
                android:id="@+id/activity_setting_logout_btn"
                style="@style/Smile.Button.logout"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/logout"
                android:visibility="gone"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
